Added new phase graph
